# Auditor-blogs

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: slack-app-manifest.json  slack-app-manifest.yaml
docs/: ARQUITECTURA.md  CALIBRACION.md  DESPLIEGUE-SLACK.md  PROPUESTA-AGENTE-CALIDAD-BLOGS.md
examples/: borrador-ejemplo.md
src/blog_auditor/: __init__.py  cli.py  config.py  exceptions.py
src/blog_auditor/llm/: __init__.py  base.py  openai_provider.py
src/blog_auditor/loaders/: __init__.py  dispatch.py  docx_loader.py  gdoc_loader.py  html_extract.py  pdf_loader.py  text_loader.py
src/blog_auditor/prompts/: brand_context.md  system_prompt.md
src/blog_auditor/review/: __init__.py  engine.py  models.py  report.py
src/blog_auditor/slack/: __init__.py  app.py  formatting.py  handlers.py
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_html_extract.py  test_loaders.py  test_models.py  test_report.py  test_slack_formatting.py  test_slack_handlers.py
