[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-auditor"
version = "0.1.0"
description = "Agente revisor de calidad de borradores de blog para Teilur Talent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Teilur Engineering" }]
dependencies = [
    "openai>=1.50",
    "pydantic>=2.7",
    "typer>=0.12",
    "httpx>=0.27",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "slack-bolt>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
blog-auditor = "blog_auditor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"blog_auditor.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/blog_auditor"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# B008: `typer.Option(...)` en defaults es el idioma estándar de Typer.
"src/blog_auditor/cli.py" = ["B008"]
